# cargo-rbext

./: .gitignore  Cargo.toml  README.md
src/: cmd_build.rs  cmd_install.rs  cmd_new.rs  main.rs
src/data/: usage-build.txt  usage-install.txt  usage-new.txt  usage.txt
src/data/rosy-bin/: Cargo.toml.append
src/data/rosy-bin/src/: main.rs
src/data/rosy-lib/: Cargo.toml.append  Rakefile  RubyExt.toml  build.rs
src/data/rosy-lib/src/: lib.rs
